Add custom scrollbar

--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
 	<link rel="stylesheet" href="css/main.min.css">
 
 </head>
-<body>
+<body class="mCustomScrollbar" data-mcs-theme="dark"> 
 
 	<header class="header">
 		<div class="header__plant">
@@ -488,4 +488,4 @@
 	<script src="js/common.js"></script>
 
 </body>
-</html>
+</html> 
