Add mobile adaptation

--- a/app/index.html
+++ b/app/index.html
@@ -33,13 +33,15 @@
 		</div>
 		<div class="container">
 			<div class="header__contacts">
-				<div class="header__contacts-tel">
-					<span>Інформаційна лінія:</span>
-					<a href="tel:8 800 000000">8 800 000000</a>
-				</div>
-				<div class="header__contacts-social">
-					<a class="header__contacts-fb" href="#"></a>
-					<a class="header__contacts-ins" href="#"></a>
+				<div class="header__contacts-wrap">
+					<div class="header__contacts-tel">
+						<span>Інформаційна лінія:</span>
+						<a href="tel:8 800 000000">8 800 000000</a>
+					</div>
+					<div class="header__contacts-social">
+						<a class="header__contacts-fb" href="#"></a>
+						<a class="header__contacts-ins" href="#"></a>
+					</div>
 				</div>
 				<ul class="header__language">
 					<li class="active"><a href="#">рус</a></li>
@@ -79,17 +81,19 @@
 			<div class="target__subtitle">Допоможе впоратися з такими проблемами:</div>
 			<div class="target__center">
 
-				<div class="target__img">
-					<img class="target__full" src="img/target-img.png" alt="Тутукон">
-					<div class="target__wrap">
-						<div class="target__round wow zoomIn"><img src="img/target-round.png" alt="Тутукон"></div>
-						<div class="target__border wow zoomIn" data-wow-duration="1.5s"></div>
-						<div class="target__thin  wow rotateIn" data-wow-duration="2s"><img src="img/target-thin.png" alt="Тутукон"></div>
+				<div class="target__img-wrap">
+					<div class="target__img">
+						<img class="target__full" src="img/target-img.png" alt="Тутукон">
+						<div class="target__wrap">
+							<div class="target__round wow zoomIn"><img src="img/target-round.png" alt="Тутукон"></div>
+							<div class="target__border wow zoomIn" data-wow-duration="1.5s"></div>
+							<div class="target__thin  wow rotateIn" data-wow-duration="2s"><img src="img/target-thin.png" alt="Тутукон"></div>
+						</div>
 					</div>
-				</div>
-
-				<div class="target__block wow zoomInRight" data-wow-duration="2s" data-wow-delay="1s">
-					<img src="img/target-block.png" alt="Тутукон">
+	
+					<div class="target__block wow zoomInRight" data-wow-duration="2s" data-wow-delay="1s">
+						<img src="img/target-block.png" alt="Тутукон">
+					</div>
 				</div>
 				<ul class="target__list target__list-left">
 					<li>Профілактика утворення каменів (метафілактика)</li>
@@ -153,7 +157,7 @@
 				<img src="img/logo.svg" alt="Тутукон"> - СУЧАСНИЙ ЛІКАРСЬКИЙ ЗАСІБ З НАУКОВО ДОВЕДЕНИМИ ТЕРАПЕВТИЧНИМИ  ЕФЕКТАМИ
 			</div>
 			<div class="effect__top">
-				<div class="effect__top-left">лікарськи	рослин</div>
+				<div class="effect__top-left">лікарських рослин</div>
 				<div class="effect__arrow-wrap">
 					<img src="img/effect-arrow-left.svg" alt="Тутукон" class="wow slideInLeft" data-wow-duration="4s">
 				</div>
@@ -225,6 +229,7 @@
 			</div>
 			<div class="prevention__bottom">
 				<div class="prevention__bottom-left">
+
 					<div class="target__center">
 						<div class="target__img">
 							<img class="target__full" src="img/target-img.png" alt="Тутукон">
@@ -238,6 +243,7 @@
 							<img src="img/target-block.png" alt="Тутукон">
 						</div>
 					</div>
+					
 				</div>
 				<div class="prevention__bottom-right">
 					<div class="prevention__head wow fadeInRight">
